[BugFix] Fix window output partition propery
Signed-off-by: Seaven <seaven_7@qq.com>